# onepiece

./: .gitignore  API.md  CICD.md  CLASS_ANALYSIS.md  Dockerfile  JENKINS_GUIDE.md  Jenkinsfile  Makefile  README.md  docker-compose.yml  download_images.py  init.sql  local  pyproject.toml  requirements.txt  wait-for-mysql.sh
.github/workflows/: cd.yml  ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
onepiece/: app.py  config.py
onepiece/controllers/: __init__.py  auth_controller.py  crew_controller.py  pirate_group_controller.py  registry.py
onepiece/models/: __init__.py  crew_member.py  database.py  pirate_group.py  user.py
onepiece/services/: __init__.py  auth_service.py  crew_service.py  pirate_group_service.py
onepiece/static/: index.html
onepiece/utils/: __init__.py  response.py
onepiece/views/: common.py  crew.py  index.py  pirate_group.py  registry.py
tests/: test_app.py
